# sensors-anomalies

./: .envrc  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: deploy-to-hf-space.yml
src/sensors_anomalies/: __init__.py  types.py
src/sensors_anomalies.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sensors_anomalies/algorithms/: __init__.py  periods.py  registry.py  unsupervised.py
src/sensors_anomalies/datasets/: __init__.py  registry.py  sensor_fault.py
src/sensors_anomalies/utils/: __init__.py  csv_utils.py  time.py
tests/: test_algorithms.py  test_csv_utils.py  test_imports.py  test_periods.py  test_transformers.py  test_types.py
